WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145752
REGRESSION(
r185262
): [EFL] Modify legacyPlatformDefaultNetworkCacheDirectory() according to network cache
https://bugs.webkit.org/show_bug.cgi?id=145752
Summary
REGRESSION(r185262): [EFL] Modify legacyPlatformDefaultNetworkCacheDirectory(...
Gyuyoung Kim
Reported
2015-06-08 01:33:45 PDT
EFL port needs to add different prefix for network cache directory since
r185262
. Modify it basedon GTK port fix.
Attachments
Patch
(1.91 KB, patch)
2015-06-08 01:34 PDT
,
Gyuyoung Kim
no flags
Details
Formatted Diff
Diff
Patch
(1.91 KB, patch)
2015-06-08 01:35 PDT
,
Gyuyoung Kim
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Gyuyoung Kim
Comment 1
2015-06-08 01:34:31 PDT
Created
attachment 254480
[details]
Patch
Gyuyoung Kim
Comment 2
2015-06-08 01:35:45 PDT
Created
attachment 254481
[details]
Patch
WebKit Commit Bot
Comment 3
2015-06-08 03:45:36 PDT
Comment on
attachment 254481
[details]
Patch Clearing flags on attachment: 254481 Committed
r185314
: <
http://trac.webkit.org/changeset/185314
>
WebKit Commit Bot
Comment 4
2015-06-08 03:45:39 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug