Source/WebKit2/UIProcess/efl/WebProcessPoolEfl.cpp
@@ -128,7 +128,18 @@ String WebProcessPool::legacyPlatformDefaultMediaKeysStorageDirectory()
 
 String WebProcessPool::legacyPlatformDefaultNetworkCacheDirectory()
 {
-    return String::fromUTF8(efreet_cache_home_get()) + "/WebKitEfl";
+#if ENABLE(NETWORK_CACHE)
+    static const char networkCacheSubdirectory[] = "WebKitCache";
+#else
+    static const char networkCacheSubdirectory[] = "webkit";
+#endif
+
+    StringBuilder diskCacheDirectory;
+    diskCacheDirectory.append(efreet_cache_home_get());
+    diskCacheDirectory.appendLiteral("/");
+    diskCacheDirectory.append(networkCacheSubdirectory);
+
+    return diskCacheDirectory.toString();
 }
 
 void WebProcessPool::setIgnoreTLSErrors(bool ignoreTLSErrors)
